@@ -2037,11 +2037,11 @@ class MyAlarm(StdService):
 	advantage of being compatible with the wview database. Nevertheless, there may 
 	be occasions where you may want to add a SQL type to your database, or change 
 	its unit system. This section shows you how to do this, using the utility
-	<span class="code">./bin/config_database.py</span>.</p>
+	<span class="code">./bin/wee-config-database.py</span>.</p>
       <p>Before starting, it's worth running the utility with the
 	<span class="code">--help</span> flag to see how it is used:</p>
       <p class="tty">cd /home/weewx
-./bin/config_database.py --help</p>
+./bin/wee-config-database.py --help</p>
       <h2>Adding a new observation type</h2>
       <p>Suppose you have installed an electric meter at your house and you wish to 
 	correlate electrical usage with the weather. The meter has some sort of connection 
@@ -2122,12 +2122,12 @@ class MyAlarm(StdService):
 	attached to the end. Make sure you have the necessary permissions to do this. 
 	In particular, if you are using MySQL, you will need '<span class="code">CREATE</span>' 
 	privileges.</p>
-      <p>3. <strong>Run <span class="code">config_database.py</span>.</strong> Now 
-	run the utility <span class="code">config_database.py</span> with the
+      <p>3. <strong>Run <span class="code">wee-config-database.py</span>.</strong> Now 
+	run the utility <span class="code">we-config-database.py</span> with the
 	<span class="code">--reconfigure</span> option and the path to the configuration 
 	file:</p>
       <p class="tty">cd /home/weewx
-./bin/config_database.py --reconfigure ./weewx.conf</p>
+./bin/wee-config-database.py --reconfigure ./weewx.conf</p>
       <p>This will create a new database (nominally, <span class="code">weewx.sdb_new</span> 
 	if you are using sqlite, <span class="code">weewx_new</span> if you are using 
 	MySQL) using the new schema and populate it with data from the old database.
@@ -2242,11 +2242,11 @@ mv weewx.sdb_new weewx.sdb</p>
 	attached to the end. Make sure you have the necessary permissions to do this. 
 	In particular, if you are using MySQL, you will need '<span class="code">CREATE</span>' 
 	privileges.</p>
-      <p>3. <strong>Run <span class="code">config_database.py</span>.</strong> Now 
-	run the utility <span class="code">config_database.py</span> with the
+      <p>3. <strong>Run <span class="code">wee-config-database.py</span>.</strong> Now 
+	run the utility <span class="code">wee-config-database.py</span> with the
 	<span class="code">--reconfigure</span> option:</p>
       <p class="tty">cd /home/weewx
-./bin/config_database.py --reconfigure ./weewx.conf</p>
+./bin/wee-config-database.py --reconfigure ./weewx.conf</p>
       <p>This will create a new database (nominally, <span class="code">weewx.sdb_new</span> 
 	if you are using sqlite, <span class="code">weewx_new</span> if you are using 
 	MySQL), using the schema found in <span class="code">./bin/user/schemas.py</span>, 
