@@ -30,6 +30,14 @@ for older stats databases.
 
 Added rain rate calculation to FineOffsetUSB driver.
 
+Changed the name of the utilities, so they will be easier to find in
+/usr/bin:
+  runreports.py      -> wee-reports.py
+  config_database.py -> wee-config-database.py
+  config_vp.py       -> wee-config-vantage.py
+  config_fousb.py    -> wee-config-fousb.py
+  
+
 2.1.1 01/02/13
 
 Fixed bug that shows itself when one of the variables is 'None' when
